Preliminary Java 16 Gradle Support (#5314)
Change project to Java 16, split mixins/accessors into separate  source sets and compile using J8 for the time being.